--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,8 @@ html, body {
   background-color: #333;
   color: #fff; }
 
-.logo {
-  background-color: green;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%; }
+.fancy-title {
+  text-shadow: 2px 2px 0px #333, 3px 3px 0px #c8c8c8; }
 
 body {
   margin-bottom: 60px; }
