--- a/css/style.scss
+++ b/css/style.scss
@@ -8,11 +8,8 @@ html, body {
     color: #fff;
 }
 
-.logo {
-    background-color: green;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+.fancy-title {
+    text-shadow: 2px 2px 0px #333, 3px 3px 0px rgb(200, 200, 200);
 }
 
 body {
