--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html {
   min-height: 100%; }
 
 html, body {
-  background-color: #333;
+  background-color: #343a40;
   color: #fff; }
 
 .fancy-title {
