--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@ html {
 }
 
 html, body {
-    background-color: #333;
+    background-color: #343a40;
     color: #fff;
 }
 
@@ -19,6 +19,7 @@ body {
 .container {
     color: #fff;
 }
+
 
 .break {
     margin: 0;
