--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,10 @@ p {
     margin: auto 10% auto 10%;
 }
 
+.project_thumbnail {
+    max-width:300px;
+}
+
 .break {
     margin: 0;
     height: 1px;
