Removed jquery from js.

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@ html, body {
 
 .fancy-title {
     text-shadow: 2px 2px 0px #333, 3px 3px 0px rgb(200, 200, 200);
+    display: none;
 }
 
 body {
